Update Classes and Files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-spring.data.mongodb.uri=mongodb+srv://sathya_swaruban:IQsNneGsijudRAOp@cluster0.ztvitbk.mongodb.net/wfhRequestDB
-spring.data.mongodb.database=wfhRequestDB
+# logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
+# logging.level.org.springframework.jdbc=DEBUG
+spring.h2.console.enabled=true
+spring.datasource.generate-unique-name=false
+spring.datasource.name=wfhdb
