Update Classes and Files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 # logging.level.org.springframework.jdbc=DEBUG
+# spring.datasource.generate-unique-name=false
+# spring.datasource.name=wfhdb
+spring.datasource.url=jdbc:h2:file:~/wfhdb
+spring.sql.init.mode=always
 spring.h2.console.enabled=true
-spring.datasource.generate-unique-name=false
-spring.datasource.name=wfhdb
