--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>wfh</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>wfh</name>
-	<description>WFH - Spring Boot + React + MongoDB project</description>
+	<description>A Spring Boot project</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
