--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@
 # logging.level.org.springframework.jdbc=DEBUG
 # spring.datasource.generate-unique-name=false
 # spring.datasource.name=wfhdb
-spring.datasource.url=jdbc:h2:file:~/wfhdb
+spring.datasource.url=jdbc:h2:file:~/h2/wfhdb
 spring.sql.init.mode=always
 spring.h2.console.enabled=true
